--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@auth/drizzle-adapter": "^1.4.1",
     "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-query-devtools": "^5.51.21",
+    "@tanstack/react-table": "^8.20.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/luxon": "^3.4.2",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
@@ -35,27 +40,36 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.2",
     "express": "^4.19.2",
     "framer-motion": "^11.2.13",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.399.0",
+    "luxon": "^3.5.0",
     "mysql2": "^3.10.1",
     "next": "14.2.4",
     "next-auth": "beta",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "radix-ui": "^1.0.1",
+    "randomcolor": "^0.6.2",
     "react": "^18",
+    "react-colorful": "^5.6.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/randomcolor": "^0.5.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.22.8",
