--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.2",
