--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "express": "^4.19.2",
     "framer-motion": "^11.2.13",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.399.0",
+    "lucide-react": "^0.429.0",
     "luxon": "^3.5.0",
     "mysql2": "^3.10.1",
     "next": "14.2.4",
@@ -62,6 +62,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
