--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "1.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "drizzle-orm": "^0.31.2",
     "express": "^4.19.2",
     "framer-motion": "^11.2.13",
