--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     depends_on:
       - db
     command: sh -c "npm i && npm run build && npm run start"
+    restart: unless-stopped
   http-db:
     env_file:
       - .env
@@ -30,6 +31,7 @@ services:
     depends_on:
       - db
     command: sh -c "npm i && npm run http-db"
+    restart: unless-stopped
   db:
     image: mysql:8.0
     container_name: db
@@ -41,6 +43,7 @@ services:
       - '${MYSQL_PORT}:3306'
     volumes:
       - dbdata:/var/lib/mysql
+    restart: unless-stopped
 volumes:
   dbdata:
     name: azienda-agricola-maggini-dbdata
